# Messenger

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/ContactsModule/: CMakeLists.txt  clientmanager.cpp  contact.cpp  contactsmodel.cpp  contactsreader.cpp  contactsworker.cpp
src/ContactsModule/include/: clientmanager.h  contact.h  contactsmodel.h  contactsreader.h  contactsworker.h
src/DBManager/: CMakeLists.txt  ConnectionManager.cpp  Executor.cpp  Manipulator.cpp  Processor.cpp  Selector.cpp
src/DBManager/include/: ConnectionManager.h  Executor.h  Manipulator.h  Processor.h  Selector.h  dbmapper.h  dbtypes.h
src/NetworkLib/: CMakeLists.txt  connectionargumentsparser.cpp  package.cpp
src/NetworkLib/include/: connectionargumentsparser.h  networktypes.h  package.h
src/Qml/: BaseListDelegate.qml  BaseListView.qml  BaseText.qml  CMakeLists.txt  ContactDelegate.qml  ContactsView.qml  Main.qml  Style.qml
